calculate mean We can calculate numeric and logical vectors' means because the logical vector "FALSE" and "TRUE"was transformed into numeric 0 and 1. Since character and factor cannot be transformed, their means could not be calculated.

--- a/github_document.Rmd
+++ b/github_document.Rmd
@@ -19,4 +19,9 @@ df = tibble(
 )
 #print df
 df
+#mean of variables in dataframe
+mean(df$rs)
+mean(df$vec_logical)
+mean(df$vec_character)
+mean(df$vec_factor)
 ```
