--- a/github_document.Rmd
+++ b/github_document.Rmd
@@ -56,6 +56,7 @@ vec_logical2 = x + y > 0
 vec_numeric2 = as.numeric(vec_logical2)
 vec_factor2 = as.factor(vec_logical2)
 
+df2 = tibble(x, y, vec_logical2, vec_numeric2, vec_factor2)
 
 
 ```
