--- a/github_document.Rmd
+++ b/github_document.Rmd
@@ -61,6 +61,12 @@ df2 = tibble(x, y, vec_logical2, vec_numeric2, vec_factor2)
 df2
 ```
 
-the size of the dataset is 1000 * 5
+the size of the dataset is 1000 rows * 5 columes
 the mean and median of x is `r mean(x)` and `r median(x)`
 the proportion of cases for which the logical vector is TRUE is `r (vec_logical2 = TRUE)/1000`)
+
+```{r scatterplot}
+
+
+```
+
